--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
   "editor.fontSize": 16,
   "terminal.integrated.fontSize": 14,
   "keyboard.layout": "00000809",
-  "workbench.iconTheme": "material-icon-theme"
+  "workbench.iconTheme": "material-icon-theme",
+  "editor.guides.bracketPairs": true
 }
