--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
 		                "ms-azuretools.azure-dev",
 		                "ms-azuretools.vscode-azurefunctions",
 		                "ms-python.python",
+				"ms-toolsai.jupyter",
 		                "ms-vscode.vscode-node-azure-pack",
 				"ms-vscode.azurecli",
 				"ms-dotnettools.vscode-dotnet-runtime",
@@ -64,6 +65,7 @@
 	"features": {
 		"ghcr.io/devcontainers/features/node:1": {},
 		"ghcr.io/azure/azure-dev/azd:latest": {},
+		"ghcr.io/stuartleeks/dev-container-features/azure-cli-persistence:0": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:latest": {},
 		"ghcr.io/devcontainers/features/dotnet:1": {
 			"version": "7"
@@ -76,13 +78,15 @@
 			"extensions": "amg,aks-preview,containerapp",
 			"installBicep": true
 		},
+		"ghcr.io/devcontainers/features/python:1": {
+			"installTools": true,
+			"version": "os-provided"
+		},
 		"ghcr.io/devcontainers/features/git:latest": {},
 		"ghcr.io/devcontainers/features/github-cli:latest": {},
 		"ghcr.io/devcontainers/features/terraform:latest": {},
 		"ghcr.io/devcontainers/features/kubectl-helm-minikube:latest": {},
 		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
-			"plugins": "git zsh-syntax-highlighting",
-			"omzPlugins": "https://github.com/zsh-users/zsh-syntax-highlighting https://github.com/zsh-users/zsh-autosuggestions",
 			"username": "vscode"
 		},
 		"ghcr.io/devcontainers/features/sshd:1": {
@@ -90,8 +94,5 @@
 		},
 		"ghcr.io/eitsupi/devcontainer-features/jq-likes:latest": {},
 		"ghcr.io/stuartleeks/dev-container-features/shell-history:0": {}
-	},
-	
- 	"postCreateCommand": "npm install -g @githubnext/github-copilot-cli"
-
+	}
 }
