--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -67,9 +67,7 @@
 		"ghcr.io/azure/azure-dev/azd:latest": {},
 		"ghcr.io/stuartleeks/dev-container-features/azure-cli-persistence:0": {},
 		"ghcr.io/devcontainers/features/docker-in-docker:latest": {},
-		"ghcr.io/devcontainers/features/dotnet:1": {
-			"version": "7"
-		},
+		"ghcr.io/devcontainers/features/dotnet:1": {},
 		"ghcr.io/devcontainers/features/common-utils:latest": {
  			"CONFIGUREZSHASDEFAULTSHELL": true
 		},
