--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -86,7 +86,9 @@
 		},
 		"ghcr.io/devcontainers/features/git:latest": {},
 		"ghcr.io/devcontainers/features/github-cli:latest": {},
-		"ghcr.io/devcontainers/features/terraform:latest": {},
+		"ghcr.io/devcontainers/features/terraform:latest": {
+			"tflint": true
+		},
 		"ghcr.io/devcontainers/features/kubectl-helm-minikube:latest": {},
 		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
 			"username": "vscode"
