Add Azure MCP server and consolidate MCP configuration
- Add Azure MCP server for Azure resource management
- Add GitHub, Microsoft Docs, and Context7 MCP servers
- Consolidate all MCP servers in workspace config for team sharing
- Remove duplicate configs from user settings
- Enable MCP server sampling for Azure in chat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,10 @@
   "terminal.integrated.fontSize": 14,
   "keyboard.layout": "00000809",
   "workbench.iconTheme": "material-icon-theme",
-  "editor.guides.bracketPairs": true
+  "editor.guides.bracketPairs": true,
+  "chat.mcp.serverSampling": {
+    "azdevcont/.vscode/mcp.json: azure": {
+      "allowedDuringChat": true
+    }
+  }
 }
