Fix terraform feature tflint configuration
- Changed tflint parameter from boolean true to version string 'latest'
- Corrected parameter name from 'tflintversion' to 'tflint'
- Added terragrunt parameter with 'latest' version
- Fixes container build error: Invalid TFLINT_VERSION value

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -91,8 +91,8 @@
 		"ghcr.io/devcontainers/features/git:latest": {},
 		"ghcr.io/devcontainers/features/github-cli:latest": {},
 		"ghcr.io/devcontainers/features/terraform:latest": {
-			"tflint": true,
-			"tflintversion": "latest"
+			"tflint": "latest",
+			"terragrunt": "latest"
 		},
 		"ghcr.io/devcontainers/features/kubectl-helm-minikube:latest": {},
 		"ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {
